Fix med main nav horizontal scroll

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -76,6 +76,10 @@
         width: $site-max-width;
       }
 
+      @media only screen and (max-width : $breakpoint-medium) {
+        width: $breakpoint-medium;
+      }
+
       span {
         display: none;
       }
